# TD_Package

./: .gitignore  CrashAutoSave.Project.toe  Docker-Compose.yaml  Example.toe  ExampleSansPowdermonkey.toe  Project.toe  README.md  main.py  pyproject.toml  td.version
Configs/General/: General.json  General.schema.json
Data/: eventEmitter_EventDefinition.json
Lib/SimpleTest/: Release.tox  _Typing.py  __init__.py
Modules/release/: Forklift.tox  PowderMonkey.tox
Modules/release/Forklift_stubs/: extForklift.pyi
Modules/release/PowderMonkey_stubs/: extPowderMonkey.pyi
Modules/suspects/project/: Configs.tox  ExampleComp.tox  Forklift.tox  PowderBrowser.tox  PowderMonkey.tox  autoComplete_Example.py
Modules/suspects/project/Configs/: GeneralConfig_callbacks.py  LocalConfig_callbacks.py
Modules/suspects/project/ExampleComp/: extExampleExtension.py
Modules/suspects/project/ExampleComp/SubComp/: extSubComp.py
Modules/suspects/project/Forklift/: CustomTypingsAstParser.py  extForklift.py  typingsAstParser.py
Modules/suspects/project/PowderBrowser/: extPowderBrowser.py
Modules/suspects/project/PowderMonkey/: extPowderMonkey.py
src/ExampleComp/: MANIFEST.in  pyproject.toml
src/ExampleComp/src/ExampleComp/: ExampleComp.tox  __init__.py  extExampleExtension.py
src/qrcode/: pyproject.toml
src/qrcode/src/qrcode/: _Typing.py  __init__.py  extQrCode.languageext  qrcode.tox
src/queriedWebclient/src/queriedWebclient/: __init__.py  queriedWebclient.tox
