[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdp-ExampleComp"
version = "0.7"
dependencies = []
authors = [{"name"= "Wieland Hilker", "email"= "Wieland@PlusPlus.One"}]
description = "We are just testing some stuff, ok?"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["TouchDesigner", "2023.31378", "Test"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows"
]

[tool.setuptools.package-data]
"*" = ["*.tox"]

[project.urls]
TouchDesigner="https://derivative.ca"