[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tdp-qrcode"
version = "0.4"
dependencies = ["qrcode[pil]"]
authors = [{"name"= "Testauthor", "email"= "foo@bar.abd"}]
description = ""
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
keywords = ["TouchDesigner", "2023.31378", "qr", "scan", "", ""]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Microsoft :: Windows"
]

[tool.setuptools.package-data]
"*" = ["*.tox"]

[project.urls]
helloworld="https://helloworld.com"